<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="no.larsvidar.quizshow.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/welcome_bottom_margin"
        android:fontFamily="cursive"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textSize="@dimen/welcome_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/start_logo_margin_bottom"
        android:fontFamily="@font/berkshireswash"
        android:text="@string/game_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/logo_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tagline_margin_bottom"
        android:fontFamily="sans-serif-light"
        android:text="@string/tagline"
        android:textAlignment="center"
        android:textColor="@color/textColorDark"
        android:textSize="@dimen/tagline_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="startQuiz"
        android:text="@string/start_button" />

</LinearLayout>
